# qml-module-edupals-base

./: CMakeLists.txt
debian/: changelog  control  copyright
src/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
